[gd_scene load_steps=8 format=2]

[ext_resource path="res://Reso/PNG/Decor_Items/Czech_Hdgehog_B.png" type="Texture" id=1]
[ext_resource path="res://World/HdgehogWood.gd" type="Script" id=2]
[ext_resource path="res://World/hdgehogArea2D.gd" type="Script" id=3]
[ext_resource path="res://Player/health_bar_empty — копия.jpg" type="Texture" id=4]
[ext_resource path="res://Player/health_bar_empty.jpg" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 41.0898

[sub_resource type="CircleShape2D" id=2]
radius = 65.0719

[node name="HdgehogWood" type="StaticBody2D"]
z_index = 1
collision_layer = 32
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.374573, 4.30763 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="Czech_Hdgehog_B" type="Sprite" parent="Area2D"]
position = Vector2( -0.824097, 3.29913 )
scale = Vector2( 0.461, 0.461 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Progress" type="TextureProgress" parent="Area2D"]
margin_left = -45.5111
margin_top = -54.3136
margin_right = 431.489
margin_bottom = -5.31363
rect_scale = Vector2( 0.2, 0.13 )
max_value = 300.0
value = 300.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
